--- a/My Project/Resources.resx
+++ b/My Project/Resources.resx
@@ -145,6 +145,12 @@
   <data name="IMG_2067[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\IMG_2067[1].JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="IMG_E2129[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\IMG_E2129[1].JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="IMG_2238[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\IMG_2238[1].JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="IMG_1808[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\IMG_1808[1].JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -280,6 +286,9 @@
   <data name="IMG_0105[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\IMG_0105[1].PNG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="IMG_2285[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\IMG_2285[1].JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="IMG_1803[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\IMG_1803[1].JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -328,8 +337,8 @@
   <data name="IMG_1961[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\IMG_1961[1].JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="IMG_1150[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\IMG_1150[1].JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="IMG_2240[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\IMG_2240[1].JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="IMG_1111[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\IMG_1111[1].JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -532,6 +541,9 @@
   <data name="IMG_1842[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\IMG_1842[1].JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="IMG_2239[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\IMG_2239[1].JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="IMG_1618[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\IMG_1618[1].JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -721,6 +733,9 @@
   <data name="IMG_1984[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\IMG_1984[1].JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="IMG_1150[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\IMG_1150[1].JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="IMG_0109[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\IMG_0109[1].JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -885,6 +900,9 @@
   </data>
   <data name="IMG_0165[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\IMG_0165[1].JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="IMG_2241[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\IMG_2241[1].JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="IMG_1173[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\IMG_1173[1].JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -1171,7 +1189,7 @@
   <data name="IMG_1978[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\IMG_1978[1].JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="IMG_E2129[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\IMG_E2129[1].JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="IMG_2211[1]" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\IMG_2211[1].JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
